Refactor naming in backend and in cypress dir in frontend